[tool.poetry]
name = "antaresviewer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "23.3.0"
pymongo = "4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
